WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309018
REGRESSION (
301944@main
): WebGL uniform block variables get uniform location objects
https://bugs.webkit.org/show_bug.cgi?id=309018
Summary
REGRESSION (301944@main): WebGL uniform block variables get uniform location ...
Kimmo Kinnunen
Reported
2026-03-02 16:26:40 PST
REGRESSION (
301944@main
): unused uniform block variables get uniform location object
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-02 16:26:45 PST
<
rdar://problem/171569214
>
Kimmo Kinnunen
Comment 2
2026-03-02 17:39:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59761
EWS
Comment 3
2026-03-02 20:04:29 PST
Committed
308507@main
(e7c1f6f9f732): <
https://commits.webkit.org/308507@main
> Reviewed commits have been landed. Closing PR #59761 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug