Source/WebCore/html/canvas/WebGLProgram.cpp
@@ -176,11 +176,15 @@ const HashMap<String, int>& WebGLProgram::uniformLocations() LIFETIME_BOUND
     if (!m_state.uniformLocations) {
         auto& locations = m_state.uniformLocations.emplace();
         for (auto& activeUniform : activeUniforms()) {
+            if (activeUniform.blockIndex != -1)
+                continue;
             auto name = String::fromUTF8(activeUniform.name.data());
-            locations.add(name, activeUniform.locations[0]);
+            if (activeUniform.locations[0] != -1)
+                locations.add(name, activeUniform.locations[0]);
             if (name.endsWith("[0]"_s)) {
                 auto baseName = name.left(name.length() - 3);
-                locations.add(baseName, activeUniform.locations[0]);
+                if (activeUniform.locations[0] != -1)
+                    locations.add(baseName, activeUniform.locations[0]);
                 for (size_t i = 1; i < activeUniform.locations.size(); ++i) {
                     if (activeUniform.locations[i] != -1)
                         locations.add(makeString(baseName, '[', i, ']'), activeUniform.locations[i]);
